<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screens.settings.SettingsFragment"
        tools:ignore="NotSibling">

        <include
            android:id="@+id/toolbar"
            layout="@layout/top_app_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ProgressBar
            android:id="@+id/loading"
            style="Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_save" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/url_web_service_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/url_web_service_hint_text"
            app:boxBackgroundColor="@color/lightPaleGrey"
            app:hintTextAppearance="@style/HintText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/url_web_service_text_input"
                style="@style/PrimaryText.Medium"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                tools:text="xx.xxx.xx.xxx" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/porta_web_service_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:hint="@string/porta_web_service_hint_text"
            app:boxBackgroundColor="@color/lightPaleGrey"
            app:hintTextAppearance="@style/HintText"
            app:layout_constraintEnd_toEndOf="@+id/url_web_service_text_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/url_web_service_text_input_layout"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/porta_web_service_text_input"
                style="@style/PrimaryText.Medium"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                tools:text="xx.xxx.xx.xxx" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/debug"
            style="@style/PrimaryText.Medium"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/debug_switch_text"
            app:boxBackgroundColor="@color/lightPaleGrey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/porta_web_service_text_input_layout" />

        <Button
            android:id="@+id/button_back"
            style="@style/Widget.MaterialComponents.Button.TextButton.GoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/back_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/debug"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_save"
            style="@style/SuccessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="20dp"
            android:text="@string/save_button_text"
            app:icon="@drawable/ic_check_white_20dp"
            app:layout_constraintLeft_toRightOf="@+id/button_back"
            app:layout_constraintTop_toBottomOf="@+id/debug"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
